feat: Implement Phase 1 payment memo and UI/UX improvements

--- a/src/dataxchange_frontend/index.html
+++ b/src/dataxchange_frontend/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>Dataxchange</title>
   <base href="/" />
-  <link rel="icon" href="/c:\Users\SAMPATH\Downloads\dataxchange\src\dataxchange_frontend\public\logo.svg" />
+  <link rel="icon" href="x_logo.svg" />
 </head>
 
 <body>
